# PandasRanges

./: .gitignore  LICENSE.txt  README.md  TODO.md  pyproject.toml  setup.py
src/PandasRanges/: overlaps.py  overlaps_cy.pyx  ranges.py  testing_utils.py  utils.py
tests/: binary_op_test_cases.csv  scalar_coord_test_cases.csv  scalar_offset_test_cases.csv  scalar_op_test_cases.csv  test_MinQueue.py  test_RangeSeries.py  test_RangeSeriesGroupBy.py  test_minqueue.py  test_overlaps.py  test_ranges.py  unary_op_test_cases.csv
